# LongleyRice

./: .gitignore  CMakeLists.txt  Doxyfile  ITM.cpp  ITM.h  ITMDLL.cpp  LongleyRice.cpp  Makefile  Makefile.clang  Makefile.cygwin  Makefile.linux  Makefile.mingw64  NOTES.md  Profile.txt  RunITM.cpp  RunITMDLL.cpp  RunITModel.cpp  RunITModelOld.cpp  RunLongleyRice.cpp  TestITModel.cpp  TestITModelOld.cpp  TestLongleyRice.cpp  TestLongleyRiceOld.cpp  clang.sh  home.sh  itm_1.in  mingw64.sh  noexec.sh  qerfi.cpp  test1.in  test1.out  test2.in  test2.out  test3.in  test3.out  test4.in  test4.out  test5.in  test5.out
Fortran/: Makefile  itm_man.txt  qkpfl.for  qkpfldat.out
cmake/: ITMConfig.cmake.in  LongleyRiceConfig.cmake.in
itm32/: TestITModel.out  itm_1.out
itm64/: TestITModel.out  TestITModelOld.out  itm_1.out
scripts/: build.sh  cmake_debug32.sh  cmake_debug64.sh  cmake_release32.sh  cmake_release64.sh  cygwin.sh  linux.sh  noexec.sh
